--- a/CONTALG.html
+++ b/CONTALG.html
@@ -53,49 +53,38 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </ul>
 <h2>Topics</h2>
 <ul>
-<li><p>Introduction</p>
-<ul>
-<li><p>Interface between optimization and sampling <a href="./teaching/OPTML/leture_1_introduction.pptx">[slides]</a><br /></p>
+<li><p>Interface between optimization and sampling <a href="./teaching/OPTML/leture_1_introduction.pptx">[slides]</a><br />
+</p>
 </li>
-</ul>
-
-</li>
-</ul>
-<ul>
-<li><p>Continuous optimization</p>
-<ul>
 <li><p>Subgradient method <a href="./teaching/CONTALG/Lec2_Subgradient_Method.pdf">[notes]</a><br /></p>
 </li>
 <li><p>Mirror descent <a href="./teaching/CONTALG/Lec3_Mirror_Descent.pdf">[notes]</a><br /></p>
 </li>
 <li><p>Proximal gradient method <a href="./teaching/CONTALG/Lec4_Proximal_Gradient.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Frank-Wolfe method <a href="./teaching/CONTALG/Lec5_Frank-Wolfe_Method.pdf">[notes]</a><br /></p>
+<li><p>Frank-Wolfe method <a href="./teaching/CONTALG/Lec5_Frank-Wolfe_Method.pdf">[notes]</a><br />
+</p>
 </li>
-</ul>
+<li><p>Stochastic approximation <a href="./teaching/CONTALG/Lec6_Stochastic_Approximation.pdf">[notes]</a><br />
 
+</p>
 </li>
-</ul>
-<ul>
-<li><p>Stochastic optimization</p>
-<ul>
-<li><p>Stochastic approximation <a href="./teaching/CONTALG/Lec6_Stochastic_Approximation.pdf">[notes]</a><br /></p>
+<li><p>Differential privacy</p>
 </li>
-</ul>
+<li><p>Langevin Monte Carlo</p>
+</li>
+<li><p>Proximal sampling
 
-</li>
-</ul>
-<ul>
-<li><p>Optimal transport</p>
-</li>
-</ul>
-<ul>
-<li><p>Sampling</p>
+
+
+
+
+</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-21 01:06:33 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-21 22:43:42 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
