--- a/CONTALG.html
+++ b/CONTALG.html
@@ -73,6 +73,8 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </li>
 <li><p>Langevin Monte Carlo</p>
 </li>
+<li><p>Mirror Langevin algorithm</p>
+</li>
 <li><p>Proximal sampling
 
 
@@ -84,7 +86,7 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-21 22:43:42 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-27 23:20:14 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
