--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <h2>News </h2>
 <ul>
+<li><p>A new paper <a href="https://arxiv.org/abs/2402.17067">&ldquo;On Independent Samples Along the Langevin Diffusion and the Unadjusted Langevin Algorithm&rdquo;</a>.</p>
+</li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2402.08992">&ldquo;Variance Reduction and Low Sample Complexity in Stochastic Optimization via Proximal Point Method&rdquo;</a>.</p>
 </li>
 <li><p>The paper <a href="https://link.springer.com/article/10.1007/s10107-023-02035-2">&ldquo;A single cut proximal bundle method for stochastic convex composite optimization&rdquo;</a> has been published in Mathematical Programming.</p>
@@ -77,7 +79,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-15 17:32:35 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-27 23:15:53 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
