--- a/publication.html
+++ b/publication.html
@@ -24,6 +24,11 @@
 </div>
 <h2>Preprints</h2>
 <ul>
+<li><p>On Independent Samples Along the Langevin Diffusion and the Unadjusted Langevin Algorithm <a href="https://arxiv.org/pdf/2402.17067.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang, Siddharth Mitra and Andre Wibisono, arXiv:2402.17067, 2024</p>
+</li></ul>
+</li>
 <li><p>Variance Reduction and Low Sample Complexity in Stochastic Optimization via Proximal Point Method <a href="https://arxiv.org/pdf/2402.08992.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang, arXiv:2402.08992, 2024</p>
@@ -169,7 +174,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-15 17:32:32 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-27 23:17:41 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
