--- a/CONTALG.html
+++ b/CONTALG.html
@@ -69,7 +69,7 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 
 </p>
 </li>
-<li><p>Differential privacy</p>
+<li><p>Differential privacy <a href="./teaching/CONTALG/Lec7_Differential_Privacy.pdf">[notes]</a><br /></p>
 </li>
 <li><p>Langevin Monte Carlo</p>
 </li>
@@ -86,7 +86,7 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-27 23:20:14 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-05 14:38:15 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
