--- a/CONTALG.html
+++ b/CONTALG.html
@@ -71,7 +71,7 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </li>
 <li><p>Differential privacy <a href="./teaching/CONTALG/Lec7_Differential_Privacy.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Langevin Monte Carlo</p>
+<li><p>Langevin Monte Carlo <a href="./teaching/CONTALG/Lec8_Langevin_Monte_Carlo.pdf">[notes]</a><br /></p>
 </li>
 <li><p>Mirror Langevin algorithm</p>
 </li>
@@ -86,7 +86,7 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-05 14:38:15 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-11 22:16:46 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
