--- a/talk.html
+++ b/talk.html
@@ -22,6 +22,11 @@
 <h1>Talks</h1>
 </div>
 <ul>
+<li><p>Proximal Oracles for Optimization and Sampling <a href="./talk/IOS_2024.pdf">[slides]</a> <br />
+INFORMS Optimization Society Conference, Houston, TX, March 2024 <br /></p>
+</li>
+</ul>
+<ul>
 <li><p>Variance Reduction and Low Sample Complexity in Stochastic Optimization via Proximal Point Methods <a href="./talk/SIAM_NNP_23_slides_final.pdf">[slides]</a> <br />
 SIAM-NNP Annual Meeting, Newark, NJ, October 2023 <br />
 INFORMS Annual Meeting, Phoenix, AZ, October 2023 <br />
@@ -130,7 +135,7 @@ International Conference on Ocean, Offshore and Arctic Engineering, St. Johns, N
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-15 17:34:09 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-25 14:35:32 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
