--- a/CONTALG.html
+++ b/CONTALG.html
@@ -73,9 +73,11 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </li>
 <li><p>Langevin Monte Carlo <a href="./teaching/CONTALG/Lec8_Langevin_Monte_Carlo.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Mirror Langevin algorithm</p>
+<li><p>Proximal sampling</p>
 </li>
-<li><p>Proximal sampling
+<li><p>Wasserstein space</p>
+</li>
+<li><p>Mirror Langevin algorithm
 
 
 
@@ -86,7 +88,7 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-11 22:16:46 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-03 21:32:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
