--- a/publication.html
+++ b/publication.html
@@ -24,6 +24,11 @@
 </div>
 <h2>Preprints</h2>
 <ul>
+<li><p>Proximal Oracles for Optimization and Sampling <a href="https://arxiv.org/pdf/2404.02239.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang and Yongxin Chen, arXiv:2404.02239, 2024</p>
+</li></ul>
+</li>
 <li><p>On Independent Samples Along the Langevin Diffusion and the Unadjusted Langevin Algorithm <a href="https://arxiv.org/pdf/2402.17067.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang, Siddharth Mitra and Andre Wibisono, arXiv:2402.17067, 2024</p>
@@ -174,7 +179,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-27 23:17:41 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-03 21:29:55 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
