--- a/CONTALG.html
+++ b/CONTALG.html
@@ -75,7 +75,9 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </li>
 <li><p>Proximal sampling <a href="./teaching/CONTALG/Lec9_Proximal_Sampling.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Wasserstein space <a href="./teaching/CONTALG/Lec10_Wasserstein_Space.pdf">[notes]</a><br />
+<li><p>Wasserstein space <a href="./teaching/CONTALG/Lec10_Wasserstein_Space.pdf">[notes]</a><br /></p>
+</li>
+<li><p>Revisiting differential privacy <a href="./teaching/CONTALG/Lec12_Revisiting_Differential_Privacy.pdf">[notes]</a><br />
 
 
 
@@ -87,7 +89,7 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-17 17:31:07 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-29 19:38:59 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
