--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@ Email: firstname DOT lastname AT rochester DOT edu <br />
 
 
 </p>
-<p><b>Prospective students:</b> I am looking for graduate students and postdocs who are interested in optimization, sampling, and other topics in data science, machine learning, and operations research. Feel free to contact me about any interest we may share.</p>
 </td></tr></table>
 <h2>Short Bio </h2>
 <p>Jiaming is an assistant professor in Data Science and Computer Science at the University of Rochester. He was a postdoctoral researcher at Yale CS department, under the supervision of <a href="http://www.cs.yale.edu/homes/wibisono/">Andre Wibisono</a>.
@@ -61,9 +60,8 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </li>
 <li><p>Stochastic Optimization</p>
 </li>
-<li><p>Sampling Algorithms</p>
-</li>
-<li><p>Foundation of Data Science</p>
+<li><p>Sampling Algorithms
+</p>
 </li>
 </ul>
 <h2>News </h2>
@@ -81,7 +79,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-03 21:29:27 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-29 19:41:04 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
