--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <h2>News </h2>
 <ul>
+<li><p>A new paper <a href="https://arxiv.org/abs/2407.10073">&ldquo;Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization&rdquo;</a>.</p>
+</li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2404.02239">&ldquo;Proximal Oracles for Optimization and Sampling&rdquo;</a>.</p>
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2402.17067">&ldquo;On Independent Samples Along the Langevin Diffusion and the Unadjusted Langevin Algorithm&rdquo;</a>.</p>
@@ -79,7 +81,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-29 19:41:04 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-07-18 21:47:36 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
