--- a/publication.html
+++ b/publication.html
@@ -24,6 +24,11 @@
 </div>
 <h2>Preprints</h2>
 <ul>
+<li><p>Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization <a href="https://arxiv.org/pdf/2407.10073.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Vincent Guigues, Jiaming Liang and Renato D.C. Monteiro, arXiv:2407.10073 2024</p>
+</li></ul>
+</li>
 <li><p>Proximal Oracles for Optimization and Sampling <a href="https://arxiv.org/pdf/2404.02239.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang and Yongxin Chen, arXiv:2404.02239, 2024</p>
@@ -179,7 +184,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-03 21:29:55 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-07-18 21:49:29 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
