--- a/OPTML.html
+++ b/OPTML.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="shortcut icon" type="image/x-icon" href="R.ico" />
-<title>Optimization for Machine Learning, Fall 2023</title>
+<title>Optimization for Machine Learning, Fall 2024</title>
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -19,12 +19,12 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Optimization for Machine Learning, Fall 2023</h1>
+<h1>Optimization for Machine Learning, Fall 2024</h1>
 </div>
-<p>This course primarily focuses on algorithms for large-scale optimization problems arising in machine learning and data science applications. The first part will cover first-order methods including gradient and subgradient methods, mirror descent, proximal gradient method, accelerated gradient method, Frank-Wolfe method, and inexact proximal point methods. The second part will introduce algorithms for nonconvex optimization, stochastic optimization, distributed optimization, manifold optimization, reinforcement learning, and those beyond first-order.</p>
+<p>This course primarily focuses on algorithms for large-scale optimization problems arising in machine learning and data science applications. The first part will cover various first-order methods including gradient and subgradient methods, mirror descent, proximal gradient method, accelerated gradient method, Frank-Wolfe method, and dual methods. The second part will survey topics in machine learning from an optimization perspective, e.g., stochastic optimization, distributionally robust optimization, online learning, and reinforcement learning.</p>
 <h2>Course Information</h2>
 <ul>
-<li><p><a href="https://www.youtube.com/watch?v=I_6bIrbaBW0&amp;list=PLuJY91x7h5orCtyh6mChurVQ2ZZef9qPF&amp;ab_channel=JiamingLiang">YouTube videos</a></p>
+<li><p><a href="https://www.youtube.com/watch?v=I_6bIrbaBW0&amp;list=PLuJY91x7h5orCtyh6mChurVQ2ZZef9qPF&amp;ab_channel=JiamingLiang">YouTube videos from Fall 2023</a></p>
 </li>
 </ul>
 <ul>
@@ -82,70 +82,8 @@
 <ul>
 <li><p>Introduction</p>
 <ul>
-<li><p>Applications in ML <a href="./teaching/OPTML/leture_1_introduction.pptx">[slides]</a><br /></p>
-</li>
-<li><p>Convexity and complexity <a href="./teaching/OPTML/Lec2_Convexity_and_Complexity.pdf">[notes]</a><br /></p>
-</li>
-</ul>
-
-</li>
-</ul>
-<ul>
-<li><p>First-order methods I: basic concepts</p>
-<ul>
-<li><p>Gradient method <a href="./teaching/OPTML/Lec3_Gradient_Method.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Subgradient method <a href="./teaching/OPTML/Lec4_Subgradient_Method.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Mirror descent <a href="./teaching/OPTML/Lec5_Mirror_Descent.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Proximal gradient method <a href="./teaching/OPTML/Lec6_Proximal_Gradient.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Accelerated gradient method <a href="./teaching/OPTML/Lec7_Accelerated_Gradient.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Frank-Wolfe method <a href="./teaching/OPTML/Lec8_Frank-Wolfe_Method.pdf">[notes]</a><br /></p>
-</li>
-</ul>
-
-</li>
-</ul>
-<ul>
-<li><p>First-order methods II: advanced topics</p>
-<ul>
-<li><p>Inexact proximal point methods <a href="./teaching/OPTML/Lec9_Inexact_Proximal_Point.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Augmented Lagrangian <a href="./teaching/OPTML/Lec10_Augmented_Lagrangian.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Smoothing techniques <a href="./teaching/OPTML/Lec11_Smoothing_Technique.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Optimization in relative scale <a href="./teaching/OPTML/Lec12_Optimization_in_Relative_Scale.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Randomized block coordinate descent <a href="./teaching/OPTML/Lec13_Randomized_Block_Coordinate_Descent.pdf">[notes]</a><br />
+<li><p>Applications in ML
 </p>
-</li>
-</ul>
-
-</li>
-</ul>
-<ul>
-<li><p>Selected topics in machine learning</p>
-<ul>
-<li><p>Nonconvex optimization <a href="./teaching/OPTML/Lec14_Nonconvex_Optimization.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Stochastic optimization <a href="./teaching/OPTML/Lec15_Stochastic_Optimization.pdf">[notes]</a><br />
-
-</p>
-</li>
-<li><p>Reinforcement learning <a href="./teaching/OPTML/Lec16_Reinforcement_Learning.pdf">[notes]</a><br /></p>
-</li>
-</ul>
-
-</li>
-</ul>
-<ul>
-<li><p>Beyond first-order methods</p>
-<ul>
-<li><p>Second and higher-order methods</p>
 </li>
 </ul>
 
@@ -153,7 +91,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-18 11:25:19 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-08-20 16:26:39 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
