--- a/talk.html
+++ b/talk.html
@@ -22,12 +22,22 @@
 <h1>Talks</h1>
 </div>
 <ul>
+<li><p>Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization <br />
+International Symposium on Mathematical Programming, Montréal, Canada, July 2024 <br />
+NSF CompMath PI meeting, Seattle, WA, July 2024 <br /></p>
+</li>
+</ul>
+<ul>
 <li><p>Proximal Oracles for Optimization and Sampling <a href="./talk/IOS_2024.pdf">[slides]</a> <br />
+Antai College of Economics and Management, Shanghai Jiao Tong University, Shanghai, China, June 2024 <br />
+Peking University, Beijing, China, May 2024 <br />
+Department of Applied Mathematics, The Hong Kong Polytechnic University, Hong Kong, May 2024 <br />
 INFORMS Optimization Society Conference, Houston, TX, March 2024 <br /></p>
 </li>
 </ul>
 <ul>
 <li><p>Variance Reduction and Low Sample Complexity in Stochastic Optimization via Proximal Point Methods <a href="./talk/SIAM_NNP_23_slides_final.pdf">[slides]</a> <br />
+Department of Industrial Engineering, Tsinghua University, Beijing, China, May 2024 <br />
 SIAM-NNP Annual Meeting, Newark, NJ, October 2023 <br />
 INFORMS Annual Meeting, Phoenix, AZ, October 2023 <br />
 International Conference on Stochastic Programming, Davis, CA, July 2023 <br />
@@ -135,7 +145,7 @@ International Conference on Ocean, Offshore and Arctic Engineering, St. Johns, N
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-25 14:35:32 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-08-20 15:30:08 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
