--- a/talk.html
+++ b/talk.html
@@ -22,7 +22,7 @@
 <h1>Talks</h1>
 </div>
 <ul>
-<li><p>Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization <br />
+<li><p>Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization <a href="./talk/universal.pdf">[slides]</a> <br />
 International Symposium on Mathematical Programming, Montréal, Canada, July 2024 <br />
 NSF CompMath PI meeting, Seattle, WA, July 2024 <br /></p>
 </li>
@@ -145,7 +145,7 @@ International Conference on Ocean, Offshore and Arctic Engineering, St. Johns, N
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-20 15:30:08 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-08-20 16:35:35 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
