--- a/OPTML.html
+++ b/OPTML.html
@@ -82,7 +82,7 @@
 <ul>
 <li><p>Introduction</p>
 <ul>
-<li><p>Applications in ML
+<li><p>Applications in ML <a href="./teaching/OPTML/leture_1_introduction.pptx">[slides]</a><br />
 </p>
 </li>
 </ul>
@@ -91,7 +91,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-20 16:26:39 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-08-25 19:31:55 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
