--- a/OPTML.html
+++ b/OPTML.html
@@ -82,8 +82,9 @@
 <ul>
 <li><p>Introduction</p>
 <ul>
-<li><p>Applications in ML <a href="./teaching/OPTML/leture_1_introduction.pptx">[slides]</a><br />
-</p>
+<li><p>Applications in ML <a href="./teaching/OPTML/leture_1_introduction.pptx">[slides]</a><br /></p>
+</li>
+<li><p>Convexity and complexity <a href="./teaching/OPTML/Lec2_Convexity_and_Complexity.pdf">[notes]</a><br /></p>
 </li>
 </ul>
 
@@ -91,7 +92,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-25 19:31:55 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-08-29 20:17:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
