--- a/OPTML.html
+++ b/OPTML.html
@@ -68,6 +68,8 @@
 <ul>
 <li><p>Recommended Readings</p>
 <ul>
+<li><p>Fatma Kilinc-Karzan and Arkadi Nemirovski. <i>Mathematical Essentials for Convex Optimization</i>. Cambridge University Press, 2024+.</p>
+</li>
 <li><p>Guanghui Lan. <i>First-order and Stochastic Optimization Methods for Machine Learning</i>. Springer, 2020.</p>
 </li>
 <li><p>Benjamin Recht and Stephen Wright. <i>Optimization for Data Analysis</i>. Cambridge University Press, 2022.</p>
@@ -92,7 +94,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-29 20:17:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-09-04 17:57:42 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
