--- a/OPTML.html
+++ b/OPTML.html
@@ -92,9 +92,25 @@
 
 </li>
 </ul>
+<ul>
+<li><p>First-order methods I: basic concepts</p>
+<ul>
+<li><p>Gradient method <a href="./teaching/OPTML/Lec3_Gradient_Method.pdf">[notes]</a><br /></p>
+</li>
+<li><p>Subgradient method <a href="./teaching/OPTML/Lec4_Subgradient_Method.pdf">[notes]</a><br /></p>
+</li>
+<li><p>Mirror descent <a href="./teaching/OPTML/Lec5_Mirror_Descent.pdf">[notes]</a><br />
+
+
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-04 17:57:42 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-09-27 00:41:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
