--- a/OPTML.html
+++ b/OPTML.html
@@ -99,10 +99,13 @@
 </li>
 <li><p>Subgradient method <a href="./teaching/OPTML/Lec4_Subgradient_Method.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Mirror descent <a href="./teaching/OPTML/Lec5_Mirror_Descent.pdf">[notes]</a><br />
-
-
-</p>
+<li><p>Mirror descent <a href="./teaching/OPTML/Lec5_Mirror_Descent.pdf">[notes]</a><br /></p>
+</li>
+<li><p>Proximal gradient method <a href="./teaching/OPTML/Lec6_Proximal_Gradient.pdf">[notes]</a><br /></p>
+</li>
+<li><p>Accelerated gradient method <a href="./teaching/OPTML/Lec7_Accelerated_Gradient.pdf">[notes]</a><br /></p>
+</li>
+<li><p>Frank-Wolfe method <a href="./teaching/OPTML/Lec8_Frank-Wolfe_Method.pdf">[notes]</a><br /></p>
 </li>
 </ul>
 
@@ -110,7 +113,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-27 00:41:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-10-08 16:58:15 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
