--- a/OPTML.html
+++ b/OPTML.html
@@ -111,9 +111,25 @@
 
 </li>
 </ul>
+<ul>
+<li><p>First-order methods II: advanced topics</p>
+<ul>
+<li><p>Dual methods <a href="./teaching/OPTML/Lec9_Dual_Methods.pdf">[notes]</a><br /></p>
+</li>
+<li><p>Stochastic approximation <a href="./teaching/OPTML/Lec10_Stochastic_Approximation.pdf">[notes]</a><br />
+
+
+
+
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-08 16:58:15 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-05 17:35:13 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
