--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Email: firstname DOT lastname AT rochester DOT edu <br />
 
 
 </p>
-<p><b>Prospective students:</b> I am looking for graduate students and postdocs who are interested in optimization, sampling, and other topics in data science, machine learning, and operations research. Feel free to contact me about any interest we may share.</p>
+<p><b>Prospective students:</b> I am looking for graduate students and postdocs who are self-motivated and interested in optimization, sampling, optimal transport, and related topics. Feel free to contact me.</p>
 </td></tr></table>
 <h2>Short Bio </h2>
 <p>Jiaming is an assistant professor in Data Science and Computer Science at the University of Rochester. He was a postdoctoral researcher at Yale CS department, under the supervision of <a href="http://www.cs.yale.edu/homes/wibisono/">Andre Wibisono</a>.
@@ -82,7 +82,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-05 17:37:06 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-06 01:43:58 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
