--- a/teaching.html
+++ b/teaching.html
@@ -27,6 +27,8 @@
 </li>
 <li><p><a href="https://jiaming-liang.github.io/CONTALG.html">CSC 574 / DSCC 574-1 Continuous Algorithms for Optimization and Sampling</a> (Spring 2024)</p>
 </li>
+<li><p><a href="https://jiaming-liang.github.io/NLOPT.html">CSC / DSCC / MATH 294 Nonlinear Optimization</a> (Spring 2025)</p>
+</li>
 </ul>
 <h2>Recitation instructor @ Yale</h2>
 <ul>
@@ -48,7 +50,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-20 14:55:44 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-13 17:29:01 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
