--- a/OPTML.html
+++ b/OPTML.html
@@ -116,8 +116,9 @@
 <ul>
 <li><p>Dual methods <a href="./teaching/OPTML/Lec9_Dual_Methods.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Stochastic approximation <a href="./teaching/OPTML/Lec10_Stochastic_Approximation.pdf">[notes]</a><br />
-
+<li><p>Stochastic approximation <a href="./teaching/OPTML/Lec10_Stochastic_Approximation.pdf">[notes]</a><br /></p>
+</li>
+<li><p>Smoothing techniques <a href="./teaching/OPTML/Lec11_Smoothing_Techniques.pdf">[notes]</a><br />
 
 
 
@@ -129,7 +130,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-05 17:35:13 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-13 23:38:58 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
