--- a/OPTML.html
+++ b/OPTML.html
@@ -128,9 +128,22 @@
 
 </li>
 </ul>
+<ul>
+<li><p>Selected topics in machine learning</p>
+<ul>
+<li><p>Online Optimization <a href="./teaching/OPTML/Lec12_Online_Optimization.pdf">[notes]</a><br />
+
+
+
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-13 23:38:58 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-16 22:09:05 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
