--- a/publication.html
+++ b/publication.html
@@ -24,6 +24,12 @@
 </div>
 <h2>Preprints</h2>
 <ul>
+<li><p>Primal-dual proximal bundle and conditional gradient methods for convex problems
+<a href="https://arxiv.org/pdf/2412.00585">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang, 2412.00585 2024</p>
+</li></ul>
+</li>
 <li><p>Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization <a href="https://arxiv.org/pdf/2407.10073.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Vincent Guigues, Jiaming Liang and Renato D.C. Monteiro, arXiv:2407.10073 2024</p>
@@ -61,11 +67,11 @@
 </ul>
 <h2>Journal Papers</h2>
 <ul>
-<li><p>A single cut proximal bundle method for stochastic convex composite optimization <a href="https://link.springer.com/epdf/10.1007/s10107-023-02035-2?sharing_token=SLlEHwce43QGyWRpmxHSgPe4RwlQNchNByi7wbcMAY7Itbjg9zeoao5XqhoCDcU3YwsUSjDkCtcKsD29vkR_G13qybbeH8etitsLydzIzlIKRG_i8r6F998CIubqSaw6Ee_RyJcAY2nzm4sYVbyavuW0YUmYPvQeCkWqx8WOmRk%3D">[pdf]</a> <br /></p>
+<li><p>A single cut proximal bundle method for stochastic convex composite optimization <a href="https://link.springer.com/article/10.1007/s10107-023-02035-2">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang, Vincent Guigues and Renato D.C. Monteiro</p>
 </li>
-<li><p><b>Mathematical Programming</b>, 2023</p>
+<li><p><b>Mathematical Programming</b>, 208(1):173-208, 2024.</p>
 </li></ul>
 </li>
 <li><p>A Proximal Algorithm for Sampling <a href="https://openreview.net/pdf?id=CkXOwlhf27">[pdf]</a> <br /></p>
@@ -79,7 +85,7 @@
 <ul>
 <li><p>Jiaming Liang and Renato D.C. Monteiro</p>
 </li>
-<li><p><b>Mathematics of Operations Research</b>, 2023</p>
+<li><p><b>Mathematics of Operations Research</b>, 49(2):832-855, 2024.</p>
 </li></ul>
 </li>
 <li><p>Average Curvature FISTA for Nonconvex Smooth Composite Optimization Problems <a href="https://link.springer.com/article/10.1007/s10589-023-00490-3">[pdf]</a> <br /></p>
@@ -184,7 +190,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-07-18 21:49:29 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-04 00:08:33 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
