--- a/publication.html
+++ b/publication.html
@@ -27,12 +27,12 @@
 <li><p>Primal-dual proximal bundle and conditional gradient methods for convex problems
 <a href="https://arxiv.org/pdf/2412.00585">[pdf]</a> <br /></p>
 <ul>
-<li><p>Jiaming Liang, 2412.00585 2024</p>
+<li><p>Jiaming Liang, arXiv:2412.00585, 2024</p>
 </li></ul>
 </li>
 <li><p>Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization <a href="https://arxiv.org/pdf/2407.10073.pdf">[pdf]</a> <br /></p>
 <ul>
-<li><p>Vincent Guigues, Jiaming Liang and Renato D.C. Monteiro, arXiv:2407.10073 2024</p>
+<li><p>Vincent Guigues, Jiaming Liang and Renato D.C. Monteiro, arXiv:2407.10073, 2024</p>
 </li></ul>
 </li>
 <li><p>Proximal Oracles for Optimization and Sampling <a href="https://arxiv.org/pdf/2404.02239.pdf">[pdf]</a> <br /></p>
@@ -74,18 +74,18 @@
 <li><p><b>Mathematical Programming</b>, 208(1):173-208, 2024.</p>
 </li></ul>
 </li>
-<li><p>A Proximal Algorithm for Sampling <a href="https://openreview.net/pdf?id=CkXOwlhf27">[pdf]</a> <br /></p>
-<ul>
-<li><p>Jiaming Liang and Yongxin Chen</p>
-</li>
-<li><p><b>Transactions on Machine Learning Research</b>, 2023</p>
-</li></ul>
-</li>
 <li><p>A unified analysis of a class of proximal bundle methods for solving hybrid convex composite optimization problems <a href="https://pubsonline.informs.org/doi/abs/10.1287/moor.2023.1372">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang and Renato D.C. Monteiro</p>
 </li>
 <li><p><b>Mathematics of Operations Research</b>, 49(2):832-855, 2024.</p>
+</li></ul>
+</li>
+<li><p>A Proximal Algorithm for Sampling <a href="https://openreview.net/pdf?id=CkXOwlhf27">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang and Yongxin Chen</p>
+</li>
+<li><p><b>Transactions on Machine Learning Research</b>, 2023</p>
 </li></ul>
 </li>
 <li><p>Average Curvature FISTA for Nonconvex Smooth Composite Optimization Problems <a href="https://link.springer.com/article/10.1007/s10589-023-00490-3">[pdf]</a> <br /></p>
@@ -190,7 +190,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-04 00:08:33 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-04 00:25:02 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
