--- a/OPTML.html
+++ b/OPTML.html
@@ -131,8 +131,9 @@
 <ul>
 <li><p>Selected topics in machine learning</p>
 <ul>
-<li><p>Online Optimization <a href="./teaching/OPTML/Lec12_Online_Optimization.pdf">[notes]</a><br />
-
+<li><p>Online Optimization <a href="./teaching/OPTML/Lec12_Online_Optimization.pdf">[notes]</a><br /></p>
+</li>
+<li><p>Quasi-Newton methods <a href="./teaching/OPTML/Lec13_Quasi-Newton_Methods.pdf">[notes]</a><br />
 
 
 </p>
@@ -143,7 +144,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-16 22:09:05 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-05 19:49:53 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
