--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <h2>News </h2>
 <ul>
+<li><p>A new paper <a href="https://arxiv.org/abs/2501.04165">&ldquo;Unifying restart accelerated gradient and proximal bundle methods&rdquo;</a>.</p>
+</li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2412.00585">&ldquo;Primal-dual proximal bundle and conditional gradient methods for convex problems&rdquo;</a>.</p>
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2407.10073">&ldquo;Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization&rdquo;</a>.</p>
@@ -84,7 +86,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-04 00:06:09 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-01-08 22:16:53 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
