--- a/publication.html
+++ b/publication.html
@@ -24,6 +24,12 @@
 </div>
 <h2>Preprints</h2>
 <ul>
+<li><p>Unifying restart accelerated gradient and proximal bundle methods
+<a href="https://arxiv.org/pdf/2501.04165">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang, arXiv:2501.04165, 2024</p>
+</li></ul>
+</li>
 <li><p>Primal-dual proximal bundle and conditional gradient methods for convex problems
 <a href="https://arxiv.org/pdf/2412.00585">[pdf]</a> <br /></p>
 <ul>
@@ -190,7 +196,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-04 00:25:02 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-01-08 22:16:48 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
