--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <h2>News </h2>
 <ul>
+<li><p>A new paper <a href="https://arxiv.org/abs/2505.17463">&ldquo;Multi-cut stochastic approximation methods for solving stochastic convex composite optimization&rdquo;</a>.</p>
+</li>
+<li><p>The paper <a href="https://arxiv.org/abs/2402.17067">&ldquo;Characterizing Dependence of Samples along the Langevin Dynamics and Algorithms via Contraction of <img class="eq" src="eqs/5161677540983415935-130.png" alt="Phi" style="vertical-align: -0px" />-Mutual Information&rdquo;</a> has been accepted by COLT 2025.</p>
+</li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2501.04165">&ldquo;Unifying restart accelerated gradient and proximal bundle methods&rdquo;</a>.</p>
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2412.00585">&ldquo;Primal-dual proximal bundle and conditional gradient methods for convex problems&rdquo;</a>.</p>
@@ -75,18 +79,14 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2404.02239">&ldquo;Proximal Oracles for Optimization and Sampling&rdquo;</a>.</p>
 </li>
-<li><p>A new paper <a href="https://arxiv.org/abs/2402.17067">&ldquo;On Independent Samples Along the Langevin Diffusion and the Unadjusted Langevin Algorithm&rdquo;</a>.</p>
-</li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2402.08992">&ldquo;Variance Reduction and Low Sample Complexity in Stochastic Optimization via Proximal Point Method&rdquo;</a>.</p>
-</li>
-<li><p>The paper <a href="https://link.springer.com/article/10.1007/s10107-023-02035-2">&ldquo;A single cut proximal bundle method for stochastic convex composite optimization&rdquo;</a> has been published in Mathematical Programming.</p>
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2303.14896">&ldquo;Proximal bundle methods for hybrid weakly convex composite optimization problems&rdquo;</a>.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-08 22:16:53 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-03 19:33:27 CEST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
