--- a/publication.html
+++ b/publication.html
@@ -24,6 +24,11 @@
 </div>
 <h2>Preprints</h2>
 <ul>
+<li><p>Multi-cut stochastic approximation methods for solving stochastic convex composite optimization <a href="https://arxiv.org/pdf/2505.17463.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang, Renato D.C. Monteiro, and Honghao Zhang, arXiv:2505.17463, 2025</p>
+</li></ul>
+</li>
 <li><p>Unifying restart accelerated gradient and proximal bundle methods
 <a href="https://arxiv.org/pdf/2501.04165">[pdf]</a> <br /></p>
 <ul>
@@ -38,17 +43,12 @@
 </li>
 <li><p>Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization <a href="https://arxiv.org/pdf/2407.10073.pdf">[pdf]</a> <br /></p>
 <ul>
-<li><p>Vincent Guigues, Jiaming Liang and Renato D.C. Monteiro, arXiv:2407.10073, 2024</p>
+<li><p>Vincent Guigues, Jiaming Liang, and Renato D.C. Monteiro, arXiv:2407.10073, 2024</p>
 </li></ul>
 </li>
 <li><p>Proximal Oracles for Optimization and Sampling <a href="https://arxiv.org/pdf/2404.02239.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang and Yongxin Chen, arXiv:2404.02239, 2024</p>
-</li></ul>
-</li>
-<li><p>On Independent Samples Along the Langevin Diffusion and the Unadjusted Langevin Algorithm <a href="https://arxiv.org/pdf/2402.17067.pdf">[pdf]</a> <br /></p>
-<ul>
-<li><p>Jiaming Liang, Siddharth Mitra and Andre Wibisono, arXiv:2402.17067, 2024</p>
 </li></ul>
 </li>
 <li><p>Variance Reduction and Low Sample Complexity in Stochastic Optimization via Proximal Point Method <a href="https://arxiv.org/pdf/2402.08992.pdf">[pdf]</a> <br /></p>
@@ -58,7 +58,7 @@
 </li>
 <li><p>Proximal bundle methods for hybrid weakly convex composite optimization problems <a href="https://arxiv.org/pdf/2303.14896.pdf">[pdf]</a> <br /></p>
 <ul>
-<li><p>Jiaming Liang, Renato D.C. Monteiro and Honghao Zhang, arXiv:2303.14896, 2023
+<li><p>Jiaming Liang, Renato D.C. Monteiro, and Honghao Zhang, arXiv:2303.14896, 2023
 
 </p>
 </li></ul>
@@ -75,7 +75,7 @@
 <ul>
 <li><p>A single cut proximal bundle method for stochastic convex composite optimization <a href="https://link.springer.com/article/10.1007/s10107-023-02035-2">[pdf]</a> <br /></p>
 <ul>
-<li><p>Jiaming Liang, Vincent Guigues and Renato D.C. Monteiro</p>
+<li><p>Jiaming Liang, Vincent Guigues, and Renato D.C. Monteiro</p>
 </li>
 <li><p><b>Mathematical Programming</b>, 208(1):173-208, 2024.</p>
 </li></ul>
@@ -110,7 +110,7 @@
 </li>
 <li><p>A FISTA-type accelerated gradient algorithm for solving smooth nonconvex composite optimization problems <a href="https://link.springer.com/article/10.1007/s10589-021-00280-9">[pdf]</a> <br /></p>
 <ul>
-<li><p>Jiaming Liang, Renato D.C. Monteiro and Chee-Khian Sim</p>
+<li><p>Jiaming Liang, Renato D.C. Monteiro, and Chee-Khian Sim</p>
 </li>
 <li><p><b>Computational Optimization and Applications</b>, 79(3):649-679, 2021</p>
 </li></ul>
@@ -126,14 +126,14 @@
 </li>
 <li><p>Early Termination of Convex QP Solvers in Mixed-Integer Programming for Real-Time Decision Making <a href="https://ieeexplore.ieee.org/document/9261620">[pdf]</a> <br /></p>
 <ul>
-<li><p>Jiaming Liang, Stefano Di Cairano and Rien Quirynen </p>
+<li><p>Jiaming Liang, Stefano Di Cairano, and Rien Quirynen </p>
 </li>
 <li><p><b>IEEE Control Systems Letters</b>, 5(4):1417-1422, 2020</p>
 </li></ul>
 </li>
 <li><p>Stability analysis for periodic solutions of the van der pol–duffing forced oscillator <a href="./publication/Stability.pdf">[pdf]</a><br /></p>
 <ul>
-<li><p>Jifeng Cui, Jiaming Liang and Zhiliang Lin</p>
+<li><p>Jifeng Cui, Jiaming Liang, and Zhiliang Lin</p>
 </li>
 <li><p><b>Physica Scripta</b>, 91(1):015201, 2015</p>
 </li>
@@ -143,6 +143,20 @@
 </ul>
 <h2>Conference Papers</h2>
 <ul>
+<li><p>Characterizing Dependence of Samples along the Langevin Dynamics and Algorithms via Contraction of <img class="eq" src="eqs/5161677540983415935-130.png" alt="Phi" style="vertical-align: -0px" />-Mutual Information <a href="https://arxiv.org/abs/2402.17067">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang, Siddharth Mitra, and Andre Wibisono</p>
+</li>
+<li><p><b>2025 Conference on Learning Theory (COLT)</b></p>
+</li></ul>
+</li>
+<li><p>Proximal Sampler with Adaptive Step Size <a href="https://raw.githubusercontent.com/mlresearch/v258/main/assets/yuan25a/yuan25a.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Bo Yuan, Jiaojiao Fan, Jiaming Liang, and Yongxin Chen</p>
+</li>
+<li><p><b>2025 International Conference on Artificial Intelligence and Statistics (AISTATS)</b></p>
+</li></ul>
+</li>
 <li><p>Nesterov smoothing for sampling without smoothness <a href="https://ieeexplore.ieee.org/document/10383529">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaojiao Fan, Bo Yuan, Jiaming Liang, and Yongxin Chen</p>
@@ -166,7 +180,7 @@
 </li>
 <li><p>Early Termination of Convex QP Solvers in Mixed-Integer Programming for Real-Time Decision Making <a href="https://ieeexplore.ieee.org/document/9482831">[pdf]</a> <br /></p>
 <ul>
-<li><p>Jiaming Liang, Stefano Di Cairano and Rien Quirynen</p>
+<li><p>Jiaming Liang, Stefano Di Cairano, and Rien Quirynen</p>
 </li>
 <li><p><b>2021 American Control Conference (ACC)</b></p>
 </li></ul>
@@ -196,7 +210,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-21 00:36:28 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-03 19:48:38 CEST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
