--- a/talk.html
+++ b/talk.html
@@ -23,6 +23,8 @@
 </div>
 <ul>
 <li><p>Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization <a href="./talk/universal.pdf">[slides]</a> <br />
+SIAM-NNP Annual Meeting, Rochester, NY, November 2024 <br />
+INFORMS Annual Meeting, Seattle, WA, October 2024 <br />
 International Symposium on Mathematical Programming, Montréal, Canada, July 2024 <br />
 NSF CompMath PI meeting, Seattle, WA, July 2024 <br /></p>
 </li>
@@ -145,7 +147,7 @@ International Conference on Ocean, Offshore and Arctic Engineering, St. Johns, N
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-20 16:35:35 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-03 19:51:44 CEST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
