--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Email: firstname DOT lastname AT rochester DOT edu <br />
 <h2>Short Bio </h2>
 <p>Jiaming is an assistant professor in Data Science and Computer Science at the University of Rochester. He was a postdoctoral researcher at Yale CS department, under the supervision of <a href="http://www.cs.yale.edu/homes/wibisono/">Andre Wibisono</a>.
 
-He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="https://www2.isye.gatech.edu/~monteiro/">Renato Monteiro</a>. 
+He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="https://www2.isye.gatech.edu/~monteiro/">Renato Monteiro</a>.
 
 
 </p>
@@ -84,9 +84,11 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 <li><p>A new paper <a href="https://arxiv.org/abs/2303.14896">&ldquo;Proximal bundle methods for hybrid weakly convex composite optimization problems&rdquo;</a>.</p>
 </li>
 </ul>
+<h2>Support </h2>
+<p>Jiaming's research has been supported by an AFOSR award and a seed funding from <a href="https://www.hajim.rochester.edu/dsc/research/funding.html">GIDS-AI</a>.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-03 19:33:27 CEST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-31 21:33:03 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
