--- a/OPTML.html
+++ b/OPTML.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="shortcut icon" type="image/x-icon" href="R.ico" />
-<title>Optimization for Machine Learning, Fall 2024</title>
+<title>Optimization for Machine Learning, Fall 2025</title>
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -19,7 +19,7 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Optimization for Machine Learning, Fall 2024</h1>
+<h1>Optimization for Machine Learning, Fall 2025</h1>
 </div>
 <p>This course primarily focuses on algorithms for large-scale optimization problems arising in machine learning and data science applications. The first part will cover various first-order methods including gradient and subgradient methods, mirror descent, proximal gradient method, accelerated gradient method, Frank-Wolfe method, and dual methods. The second part will survey topics in machine learning from an optimization perspective, e.g., stochastic optimization, distributionally robust optimization, online learning, and reinforcement learning.</p>
 <h2>Course Information</h2>
@@ -36,7 +36,7 @@
 </li>
 </ul>
 <ul>
-<li><p>Teaching Assistant: Lin Zang</p>
+<li><p>Teaching Assistant: Matthew Burns</p>
 </li>
 </ul>
 <ul>
@@ -48,7 +48,7 @@
 <ul>
 <li><p>4:00-5:00 pm, Wednesday, Wegmans Hall 2403 (Jiaming Liang)</p>
 </li>
-<li><p>4:00-5:00 pm, Friday, Wegmans Hall 1219 (Lin Zang)</p>
+<li><p>3:00-4:00 pm, Tuesday, Wegmans Hall 1219 (Matthew Burns)</p>
 </li>
 </ul>
 
@@ -68,7 +68,7 @@
 <ul>
 <li><p>Recommended Readings</p>
 <ul>
-<li><p>Fatma Kilinc-Karzan and Arkadi Nemirovski. <i>Mathematical Essentials for Convex Optimization</i>. Cambridge University Press, 2024+.</p>
+<li><p>Fatma Kilinc-Karzan and Arkadi Nemirovski. <i>Mathematical Essentials for Convex Optimization</i>. Cambridge University Press, 2025.</p>
 </li>
 <li><p>Guanghui Lan. <i>First-order and Stochastic Optimization Methods for Machine Learning</i>. Springer, 2020.</p>
 </li>
@@ -84,58 +84,7 @@
 <ul>
 <li><p>Introduction</p>
 <ul>
-<li><p>Applications in ML <a href="./teaching/OPTML/leture_1_introduction.pptx">[slides]</a><br /></p>
-</li>
-<li><p>Convexity and complexity <a href="./teaching/OPTML/Lec2_Convexity_and_Complexity.pdf">[notes]</a><br /></p>
-</li>
-</ul>
-
-</li>
-</ul>
-<ul>
-<li><p>First-order methods I: basic concepts</p>
-<ul>
-<li><p>Gradient method <a href="./teaching/OPTML/Lec3_Gradient_Method.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Subgradient method <a href="./teaching/OPTML/Lec4_Subgradient_Method.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Mirror descent <a href="./teaching/OPTML/Lec5_Mirror_Descent.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Proximal gradient method <a href="./teaching/OPTML/Lec6_Proximal_Gradient.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Accelerated gradient method <a href="./teaching/OPTML/Lec7_Accelerated_Gradient.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Frank-Wolfe method <a href="./teaching/OPTML/Lec8_Frank-Wolfe_Method.pdf">[notes]</a><br /></p>
-</li>
-</ul>
-
-</li>
-</ul>
-<ul>
-<li><p>First-order methods II: advanced topics</p>
-<ul>
-<li><p>Dual methods <a href="./teaching/OPTML/Lec9_Dual_Methods.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Stochastic approximation <a href="./teaching/OPTML/Lec10_Stochastic_Approximation.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Smoothing techniques <a href="./teaching/OPTML/Lec11_Smoothing_Techniques.pdf">[notes]</a><br />
-
-
-
-</p>
-</li>
-</ul>
-
-</li>
-</ul>
-<ul>
-<li><p>Selected topics in machine learning</p>
-<ul>
-<li><p>Online Optimization <a href="./teaching/OPTML/Lec12_Online_Optimization.pdf">[notes]</a><br /></p>
-</li>
-<li><p>Quasi-Newton methods <a href="./teaching/OPTML/Lec13_Quasi-Newton_Methods.pdf">[notes]</a><br />
-
-
+<li><p>Applications in ML <a href="./teaching/OPTML/leture_1_introduction.pptx">[slides]</a><br />
 </p>
 </li>
 </ul>
@@ -144,7 +93,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-05 19:49:53 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-08-19 16:40:56 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
