--- a/teaching.html
+++ b/teaching.html
@@ -23,7 +23,7 @@
 </div>
 <h2>Instructor @ U of R</h2>
 <ul>
-<li><p><a href="https://jiaming-liang.github.io/OPTML.html">DSCC 435 / CSC 435 / ECE 412 Optimization for Machine Learning</a> (Fall 2023, Fall 2024)</p>
+<li><p><a href="https://jiaming-liang.github.io/OPTML.html">DSCC 435 / CSC 435 / ECE 412 Optimization for Machine Learning</a> (Fall 2023, 2024, 2025)</p>
 </li>
 <li><p><a href="https://jiaming-liang.github.io/CONTALG.html">CSC 574 / DSCC 574-1 Continuous Algorithms for Optimization and Sampling</a> (Spring 2024)</p>
 </li>
@@ -50,7 +50,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-13 17:29:01 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-08-19 16:36:27 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
