--- a/OPTML.html
+++ b/OPTML.html
@@ -84,8 +84,9 @@
 <ul>
 <li><p>Introduction</p>
 <ul>
-<li><p>Applications in ML <a href="./teaching/OPTML/leture_1_introduction.pptx">[slides]</a><br />
-</p>
+<li><p>Applications in ML <a href="./teaching/OPTML/leture_1_introduction.pptx">[slides]</a><br /></p>
+</li>
+<li><p>Convexity and complexity <a href="./teaching/OPTML/Lec2_Convexity_and_Complexity.pdf">[notes]</a><br /></p>
 </li>
 </ul>
 
@@ -93,7 +94,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-19 16:40:56 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-09 00:10:29 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
