--- a/OPTML.html
+++ b/OPTML.html
@@ -92,9 +92,23 @@
 
 </li>
 </ul>
+<ul>
+<li><p>First-order methods I: basic concepts</p>
+<ul>
+<li><p>Gradient method <a href="./teaching/OPTML/Lec3_Gradient_Method.pdf">[notes]</a><br />
+
+
+
+
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-09 00:10:29 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-13 23:03:15 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
