--- a/publication.html
+++ b/publication.html
@@ -73,6 +73,13 @@
 </ul>
 <h2>Journal Papers</h2>
 <ul>
+<li><p>Client-only Distributed Markov Chain Monte Carlo Sampling over a Network <a href="https://openreview.net/pdf?id=1bZ2rLfKwu">[pdf]</a> <br /></p>
+<ul>
+<li><p>Bo Yuan, Jiaojiao Fan, Jiaming Liang, and Yongxin Chen</p>
+</li>
+<li><p><b>Transactions on Machine Learning Research</b>, 2025</p>
+</li></ul>
+</li>
 <li><p>A single cut proximal bundle method for stochastic convex composite optimization <a href="https://link.springer.com/article/10.1007/s10107-023-02035-2">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang, Vincent Guigues, and Renato D.C. Monteiro</p>
@@ -210,7 +217,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-03 19:48:38 CEST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-13 23:02:28 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
