--- a/OPTML.html
+++ b/OPTML.html
@@ -95,9 +95,11 @@
 <ul>
 <li><p>First-order methods I: basic concepts</p>
 <ul>
-<li><p>Gradient method <a href="./teaching/OPTML/Lec3_Gradient_Method.pdf">[notes]</a><br />
-
-
+<li><p>Gradient method <a href="./teaching/OPTML/Lec3_Gradient_Method.pdf">[notes]</a><br /></p>
+</li>
+<li><p>Subgradient method <a href="./teaching/OPTML/Lec4_Subgradient_Method.pdf">[notes]</a><br /></p>
+</li>
+<li><p>Mirror descent <a href="./teaching/OPTML/Lec5_Mirror_Descent.pdf">[notes]</a><br />
 
 
 </p>
@@ -108,7 +110,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-13 23:03:15 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-25 22:12:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
