--- a/publication.html
+++ b/publication.html
@@ -24,6 +24,11 @@
 </div>
 <h2>Preprints</h2>
 <ul>
+<li><p>Oracle-based Uniform Sampling from Convex Bodies <a href="https://arxiv.org/pdf/2510.02983.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Thanh Dang and Jiaming Liang, arXiv:2510.02983, 2025</p>
+</li></ul>
+</li>
 <li><p>Multi-cut stochastic approximation methods for solving stochastic convex composite optimization <a href="https://arxiv.org/pdf/2505.17463.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang, Renato D.C. Monteiro, and Honghao Zhang, arXiv:2505.17463, 2025</p>
@@ -217,7 +222,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-13 23:02:28 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-10-05 21:26:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
